# Coyote

./: .env  .gitignore  .justfile  Cargo.toml  README.md  ROADMAP.md  ROADMAP.txt  diesel.toml  rustfmt.toml
.just/: rs.conf
data/: italian.csv  norwegian.csv  spanish.csv  spanishA1.csv  spanish_A1.csv  spanish_A1_words.csv  spanish_A1_words_unique.csv  test.csv
migrations/2024-10-23-013626_create_memory/: down.sql  up.sql
migrations/2024-10-23-020459_create_memory/: down.sql  up.sql
sh/: setup.sh
src/: cli.rs  cmd.rs  cmds.rs  coyote.rs  custom.rs  main.rs  schema.rs  util.rs  utils.rs
src/cmd/: diag.rs  diagnose.rs  load.rs  read.rs  train.rs
src/cmds/: diag.rs  load.rs  read.rs  train.rs
src/custom/: cards.rs  fields.rs  language.rs  level.rs  log.rs  log_flag.rs  schema.rs  score.rs  train.rs
src/util/: error.rs  help.rs  io.rs  sql.rs  time.rs  traits.rs
src/utils/: cli.rs  error.rs  help.rs  io.rs  macros.rs  reader.rs  sql.rs  time.rs  traits.rs
