[package]
name = "Coyote"
version = "0.1.0"
authors = [
  "Daniel Rivas <danielrivasmd@gmail.com>"
]
repository = "https://github.com/DanielRivasMD/Coyote"
keywords = []
categories = []
licencse = "GLPv3"
readme = "README.md"
description = ""
edition = "2021"

[[bin]]
name = "coyote"
path = "src/bin/coyote.rs"


[lib]
name = "coyote"
path = "src/coyote.rs"


[dependencies]
anyhow = "1.0.89"
clap = "4.5.20"
colored = "2.1.0"
derive-new = "0.7.0"
diesel = "2.2.4"
rand = "0.8.5"
thiserror = "1.0.64"


[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1


[profile.release]
strip            = true
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1


[profile.test]
opt-level        = 3
debug            = false
rpath            = false
lto              = false
debug-assertions = false
codegen-units    = 1
