[package]
name = "coyote"
version = "0.1.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
repository = "https://github.com/DanielRivasMD/Coyote"
keywords = []
categories = []
readme = "README.md"
description = ""
edition = "2024"


[lib]
name = "coyote"
path = "src/coyote.rs"


[dependencies]
anyhow = "1"
bytelines = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
crossterm = "0.29"
derive-new = "0.7"
diesel = { version = "2", features = [
  "sqlite",
  "chrono",
  "returning_clauses_for_sqlite_3_35",
  "r2d2",
] }
dotenvy = "0.15"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
strum = "0.28"
strum_macros = "0.28"
thiserror = "2"
